GET_Training_SFDC/force-app/main/default/objects/Teach__c/Teach__c.object-meta.xml
<CustomObject>
    <label>Teach</label>
    <nameField>
        <label>Teach Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teach</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>