GET_Training_SFDC/force-app/main/default/objects/Teach__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <label>Teacher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teach</relationshipLabel>
    <relationshipName>Teach</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>